refactor: refactor features
