# internal/domain/entities/product.go
@@ -9,8 +9,8 @@ type Product struct {
 	Name        string    `json:"name" example:"Cheeseburger"`
 	Description string    `json:"description" example:"Delicious cheeseburger with cheddar and pickles"`
 	Price       float32   `json:"price" example:"12.99"`
-	Category    string    `json:"category" example:"Sandwich"`
-	Image       string    `json:"image" example:"https://example.com/images/cheeseburger.png"`
+	Category    string    `json:"category" example:"burger"`
+	ImageUrl    string    `json:"image_url" example:"https://example.com/images/cheeseburger.png"`
 	CreatedAt   time.Time `json:"created_at" example:"2024-06-01T12:00:00Z"`
 	UpdatedAt   time.Time `json:"updated_at" example:"2024-06-01T12:00:00Z"`
 }
